# recpyx

./: README.md  en_impl.py  fr_impl.py  pyproject.toml  recpyx.py
dateutil/: __init__.py  rrule.py
recpyx/: __init__.py  en.py  engine.py  fr.py  parser.py
tests/: conftest.py  test_engine.py
